--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* 
+ * Background/text/link coloring inspired by Prof. Thornton's website
+ * <https://ics.uci.edu/~thornton/>
+ */
+
+ body {
+  background-color: #ccf;
+  color: black;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 12pt;
+  line-height: 1.25;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a:link {
+  color: #009;
+  background-color: inherit;
+}
+
+a:visited {
+  color: #030;
+  background-color: inherit;
+}
+
+a:hover {
+  color: #060;
+  background-color: inherit;
+}
+
+h1 {
+  color: #009;
+  background-color: inherit;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 18pt;
+  font-weight: bold;
+  font-style: italic;
+}
+
+h2 {
+  color: #009;
+  background-color: inherit;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 14pt;
+  font-weight: bold;
+  font-style: normal;
+}
+
+input.submit {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 10pt;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
 }
